Fix z-index for title bar buttons

--- a/styles/main.css
+++ b/styles/main.css
@@ -170,8 +170,10 @@ img.glyph48 {
  margin: 8px 10px 0 20px;
 }
 #titleButtons {
-  float: right;
-  padding: 8px 10px 0 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 8px 14px 0 10px;
   line-height: 22px;
 }
 #titleButtons img {
